# stickers-test

./: .env  Cargo.toml  build.rs  tailwind.config.js
migrations/: user.surql
src/: auth.rs  error.rs  main.rs  middleware.rs  pool.rs  state.rs  template.rs
static/: input.css  style.css
