[package]
name = "stickers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
axum-extra = { version = "0.9.0", features = ["cookie-private", "cookie"] }
axum-server = { git = "https://github.com/programatik29/axum-server/", version = "0.5.1", features = ["tls-rustls"] }
deadpool = "0.10.0"
dotenv = "0.15.0"
maud = { git = "https://github.com/vidhanio/maud", branch = "patch-1", features = ["axum"] }
serde = { version = "1.0.193", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
surrealdb = "1.0.0"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "compression-gzip"] }
